<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TransBlack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        android:padding="15dp">

        <TabWidget
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twDeviceName">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeviceNameTitle"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/tvDeviceNameTitle"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeviceName"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"/>

            </RelativeLayout>

        </TabWidget>

        <TabWidget
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twDeviceAddress"
            android:layout_below="@+id/twDeviceName">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeviceAddressTitle"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/tvDeviceAddressTitle"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeviceAddress"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"/>

            </RelativeLayout>

        </TabWidget>

        <TabWidget
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twDeviceRSSI"
            android:layout_below="@+id/twDeviceAddress">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeviceRSSITitle"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/tvDeviceRSSITitle"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDeviceRSSI"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"/>

            </RelativeLayout>

        </TabWidget>


    </RelativeLayout>

</RelativeLayout>





